<resources>
    <string name="app_name">My Library</string>
    <string name="cancel">取消</string>

    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


    <string name="que_ren">"确认"</string>
    <string name="typeWeb">pageWeb</string><!--web返回页面-->
    <string name="typeWebActivty">activity</string>
    <string name="no_action">no_action</string><!--兼容 错误单词 no_ation-->
    <string name="no_ation">no_ation</string><!--兼容 错误单词 no_ation-->
    <string name="yes_action">yes_action</string>
    <!--主题色-->
    <string name="man_system_bar_color">#0089F6</string>
    <string name="down_msg">现处于非wifi状态下，下载将消耗大量流量，确定下载？</string>
    <string name="tishi">提示</string>

    <string name="scan">扫一扫</string>
    <string name="opencamera">打开相机出错，请重试</string>
    <string name="scan_tips1">将条码放入框内，即可自动扫描</string>
    <string name="scan_tips2">将二维码/条码放入框内，即可自动扫描</string>
    <string name="on_lights">开灯</string>
    <string name="off_lights">关灯</string>
    <string name="unknown_app_install_permission">未知应用安装权限获取失败！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="getImage_error">获取图片异常！</string>
    <string name="send">发送</string>
    <string name="menu">菜单</string>
    <string name="download_finish">已经下载至：</string>
    <string name="cmd_error_message">当前 cmd 命令：%s 出现异常!</string>
    <string name="sure">确定</string>
    <string name="cmd_error_title">cmd命令提示</string>
    <string name="save_local">保存到本地</string>
    <string name="copy_linke">复制链接</string>
    <string name="lack_sd_permiss">缺少读写SD卡权限！无法进行相关操作！</string>
    <string name="lack_camera_permiss">缺少读写相机权限！无法进行相关操作！</string>
    <string name="continue_the_last_play">继续上次播放！</string>
    <string name="voice">声音：</string>
    <string name="brightness">亮度：</string>
    <string name="play_finish">播放结束！</string>
    <string name="net_not_use">当前网络不可用！</string>
    <string name="load_failure">加载视频失败！</string>
    <string name="wancheng">完成</string>
    <string name="wen_xin_tips">温馨提示</string>
    <string name="jing_gao">警告！</string>
    <string name="camera_failure">相机故障，请重试</string>
    <string name="vrop_image">裁剪图片</string>
    <string name="taker_photo">拍照</string>
    <string name="taker_album">相册</string>
    <string name="upload_farlure">上传影像失败！</string>
    <string name="upload_param_is_null">参数为空上传图像失败！</string>
    <string name="close">关闭</string>
    <string name="title">标题</string>
    <string name="searcher">搜索</string>
    <string name="plase_input">请输入关键字</string>
    <string name="pick_data">选择日期</string>
    <string name="plase_chose">请选择</string>
    <string name="release_to_refresh">释放更新</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="update_src">正在更新资源包！</string><!--activity返回页面-->

</resources>
