<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ly_dialog_child"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dip"
        android:layout_marginRight="27dip"
        android:background="@drawable/bg_dialog_selector"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dip"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="18dip"
            android:gravity="center_vertical"
            android:text="@string/pick_data"
            android:textColor="#000000"
            android:textSize="18sp" 
            android:visibility="gone"/>
		<LinearLayout 
		    android:id="@+id/ly_dialog_picker"
	        android:layout_width="match_parent"
	        android:layout_height="160dip"
	        android:orientation="horizontal"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="center_vertical">
	        
	    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:layout_marginBottom="21dip"
            android:visibility="gone">

                <TextView
                    android:id="@+id/btn_dialog_sure"
                    android:layout_width="77dip"
                    android:layout_height="33dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dip"
                    android:text="@string/que_ren"
                    android:gravity="center"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/btn_dialog_cancel"
                    android:layout_width="77dip"
                    android:layout_height="33dip"
                    android:layout_toLeftOf="@+id/btn_dialog_sure"
                    android:text="@string/cancel"
                    android:gravity="center"
                    android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>