<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    android:background="@color/color_white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_gray"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.2"
                android:background="@drawable/searchborder"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:src="@drawable/ico_search" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/color_white"
                    android:focusable="true"
                    android:hint="@string/plase_input"
                    android:imeOptions="actionSearch"
                    android:imeActionLabel="@string/searcher"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="#888888"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cancle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray"
        />

    <com.mobisoft.hybridwebapp.refresh.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ListView
            android:id="@+id/lv_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:cacheColorHint="@color/color_no"
            android:divider="@color/color_main_bg"
            android:dividerHeight="1dp"
            android:listSelector="@color/color_no"
            android:scrollbars="none" >
        </ListView>

    </com.mobisoft.hybridwebapp.refresh.SwipeRefreshLayout>
</LinearLayout>
